service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-django
spec:
  type: NodePort
  selector:
    app: sample-python-app  
  ports:
    - protocol: TCP
      port: 80            # Port on the service
      targetPort: 8000     # Port the container is listening on
      nodePort: 30007      # Exposed port on the node (should be between 30000 and 32767)
